Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27687

Assertion `!thd->rgi_fake || !thd->transaction->all.ha_list' failed in Format_description_log_event::do_apply_event

    XMLWordPrintable

Details

    Description

      CREATE TABLE t (id INT KEY,str CHAR) ENGINE=InnoDB;
      SET SESSION autocommit=OFF;
      SELECT c,c2 FROM t;
      BINLOG 'wlZOTw8BAAAA8QAAAPUAAAAAAAQANS41LjIxLU1hcmlhREItZGVidWctbG9nAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAAAAAAAAEzgNAAgAEgAEBAQEEgAA2QAEGggAAAAICAgCAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA AAAAAAAAAAAA371saA==';
      

      Leads to:

      10.8.1 0c5d1342ae6b5ab3256848be7a83e5c3b1f21566 (Debug)

      mysqld: /test/10.8_dbg/sql/log_event_server.cc:2713: virtual int Format_description_log_event::do_apply_event(rpl_group_info*): Assertion `!thd->rgi_fake || !thd->transaction->all.ha_list' failed.
      

      10.8.1 0c5d1342ae6b5ab3256848be7a83e5c3b1f21566 (Debug)

      Core was generated by `/test/MD290122-mariadb-10.8.1-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x14b92c1f0700 (LWP 261968))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x000014b94b498859 in __GI_abort () at abort.c:79
      #2  0x000014b94b498729 in __assert_fail_base (fmt=0x14b94b62e588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55932a1dd628 "!thd->rgi_fake || !thd->transaction->all.ha_list", file=0x55932a1dcdc8 "/test/10.8_dbg/sql/log_event_server.cc", line=2713, function=<optimized out>) at assert.c:92
      #3  0x000014b94b4a9f36 in __GI___assert_fail (assertion=assertion@entry=0x55932a1dd628 "!thd->rgi_fake || !thd->transaction->all.ha_list", file=file@entry=0x55932a1dcdc8 "/test/10.8_dbg/sql/log_event_server.cc", line=line@entry=2713, function=function@entry=0x55932a1dd5d8 "virtual int Format_description_log_event::do_apply_event(rpl_group_info*)") at assert.c:101
      #4  0x00005593297dffa5 in Format_description_log_event::do_apply_event (this=0x14b890073c98, rgi=0x14b890072e60) at /test/10.8_dbg/sql/log_event_server.cc:2713
      #5  0x00005593294958e5 in Log_event::apply_event (rgi=0x14b890072e60, this=0x14b890073c98) at /test/10.8_dbg/sql/log_event.h:1566
      #6  save_restore_context_apply_event (ev=ev@entry=0x14b890073c98, rgi=rgi@entry=0x14b890072e60) at /test/10.8_dbg/sql/sql_binlog.cc:219
      #7  0x00005593294962b1 in mysql_client_binlog_statement (thd=thd@entry=0x14b890000db8) at /test/10.8_dbg/sql/sql_binlog.cc:439
      #8  0x000055932934defb in mysql_execute_command (thd=thd@entry=0x14b890000db8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.8_dbg/sql/sql_parse.cc:5902
      #9  0x0000559329334db7 in mysql_parse (thd=thd@entry=0x14b890000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x14b92c1ef400) at /test/10.8_dbg/sql/sql_parse.cc:8027
      #10 0x0000559329343a53 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14b890000db8, packet=packet@entry=0x14b89000b889 "BINLOG 'wlZOTw8BAAAA8QAAAPUAAAAAAAQANS41LjIxLU1hcmlhREItZGVidWctbG9n", 'A' <repeats 16 times>, " ", 'A' <repeats 24 times>, "EzgNAAgAEgAEBAQEEgAA2QAEGggAAAAICAgC", 'A' <repeats 16 times>, " ", 'A' <repeats 38 times>..., packet_length=packet_length@entry=337, blocking=blocking@entry=true) at /test/10.8_dbg/sql/sql_class.h:1362
      #11 0x0000559329346e9a in do_command (thd=0x14b890000db8, blocking=blocking@entry=true) at /test/10.8_dbg/sql/sql_parse.cc:1402
      #12 0x00005593294c2110 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55932d360b18, put_in_cache=put_in_cache@entry=true) at /test/10.8_dbg/sql/sql_connect.cc:1418
      #13 0x00005593294c2715 in handle_one_connection (arg=arg@entry=0x55932d360b18) at /test/10.8_dbg/sql/sql_connect.cc:1312
      #14 0x000055932994bc8e in pfs_spawn_thread (arg=0x55932d274d78) at /test/10.8_dbg/storage/perfschema/pfs.cc:2201
      #15 0x000014b94b9a7609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #16 0x000014b94b595293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.8.1 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.2.42 (dbg), 10.2.42 (opt), 10.3.33 (dbg), 10.3.33 (opt), 10.4.23 (dbg), 10.4.23 (opt), 10.5.14 (dbg), 10.5.14 (opt), 10.6.6 (dbg), 10.6.6 (opt), 10.7.2 (dbg), 10.7.2 (opt), 10.8.1 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.36 (dbg), 5.7.36 (opt), 8.0.27 (dbg), 8.0.27 (opt)

      Attachments

        Activity

          People

            Elkin Andrei Elkin
            Roel Roel Van de Paar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h 50m
                3h 50m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.